--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,10 +1,6 @@
-@font-face {
-  font-family: 'MPLUS1';
-  src: url('./MPLUS1-Regular.ttf') format('truetype');
-}
-
 footer {
   display: block;
+  width: 100%;
   margin-top: 80px;
   padding: 20px;
   text-align: center;
@@ -14,14 +10,15 @@ footer {
   background-color: #373064;
 }
 
-#heart-left {
+#heart-right, #heart-left {
   color: #f4364c;
   font-size: 1.2em;
+}
+
+#heart-left {
   float: left;
 }
 
 #heart-right {
-  color: #f4364c;
-  font-size: 1.2em;
   float: right;
 }
