Set up components

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -25,7 +25,8 @@ Container
 -------------------------------------------------------------------------------- */
 
 .container {
-  padding: 20px;
+  margin: 20px;
+  background-color: goldenrod;
 }
 
 /* --------------------------------------------------------------------------------
