Nav styling done, minus nav hamburger menu

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -6,6 +6,24 @@
   src: url('./Monoton/Monoton-Regular.ttf') format('truetype');
 }
 
+@keyframes flicker {
+  0%, 18%, 22%, 25%, 53%, 57%, 100% {
+    text-shadow:
+    0 0 7px #fff,
+    0 0 10px #fff,
+    0 0 21px #fcd299,
+    0 0 42px #fcd299,
+    0 0 82px goldenrod,
+    0 0 92px goldenrod,
+    0 0 102px goldenrod,
+    0 0 151px #fcd299;
+  }
+  20%, 24%, 55% {       
+    text-shadow: none;
+  }
+}
+
+
 /* @font-face {
   font-family: 'MPLUS1';
   src: url('./MPLUS1/static/MPLUS1-SemiBold.ttf') format('truetype');
@@ -38,16 +56,8 @@
   font-size: 2em;
   font-weight: 100;
   color: #f4364c;
-  text-shadow:
-  0 0 7px #fff,
-  0 0 10px #fff,
-  0 0 21px #fcd299,
-  0 0 42px #fcd299,
-  0 0 82px goldenrod,
-  0 0 92px goldenrod,
-  0 0 102px goldenrod,
-  0 0 151px #fcd299;
   margin-left: 1em;
+  animation: flicker 7s infinite alternate; 
 }
 
 /* .navLink {
