Added components and styling to Landing Page

--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -1,3 +1,17 @@
+h2, h3 {
+  text-align: center;
+}
+
+form {
+  padding: 10px;
+  text-align: center;
+}
+
+#onward-button {
+  margin: 5px;
+  background-color: #373064;
+}
+
 /* --------------------------------------------------------------------------------
 Grid
 -------------------------------------------------------------------------------- */
