--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -1,15 +1,29 @@
-h2, h3 {
+h1, h2 {
   text-align: center;
+  /* margin-bottom: 3px; */
+}
+
+h2 {
+  font-size: 1em;
 }
 
 form {
-  padding: 10px;
+  padding: 0.5em;
   text-align: center;
 }
 
 #onward-button {
-  margin: 5px;
+  margin: 0.75em;
   background-color: #373064;
+}
+
+#landing-input-div {
+  width: 0.45em;
+}
+
+.landing-input {
+  display: inline-block;
+  width: 35%;
 }
 
 /* --------------------------------------------------------------------------------
