Nav menu is a hamburger icon

--- a/src/components/Nav/NavMenu.css
+++ b/src/components/Nav/NavMenu.css
@@ -3,12 +3,11 @@
   src: url('./MPLUS1/static/MPLUS1-SemiBold.ttf') format('truetype');
 }
 
-/* .nav a {
-  text-decoration: none;
-} */
+.nav-icon {
+  color: #fcd299;
+}
 
-
-.navLink {
+/* .navLink {
   display: inline-block;
   color: #fcd299;
   background-color: #373064;
@@ -16,15 +15,15 @@
   padding:15px 10px;
   text-decoration: none;
   font-family: 'MPLUS1', sans-serif;
-  font-size: 1em;
+  font-size: 1em; */
 
   /* these last two make the logout button in
   the nav bar look like another link */
-  border: none;
+  /* border: none;
   cursor: pointer;
   outline: 0;
-}
-
+} */
+/* 
 .navLink:hover {
   background-color: #483F83;
-}
+} */
