--- a/src/components/Nav/NavMenu.css
+++ b/src/components/Nav/NavMenu.css
@@ -7,8 +7,11 @@
   color: #fcd299;
 }
 
-/* .navLink {
-  display: inline-block;
+.nav-link {
+  color: black;
+  text-decoration: none; /*remove underline*/
+  
+  /* display: inline-block;
   color: #fcd299;
   background-color: #373064;
   text-align: center;
@@ -21,8 +24,8 @@
   the nav bar look like another link */
   /* border: none;
   cursor: pointer;
-  outline: 0;
-} */
+  outline: 0; */
+}
 /* 
 .navLink:hover {
   background-color: #483F83;
