--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -14,6 +14,15 @@ footer {
   width: 69%;
 }
 
+/* --------------------------------------------------------------------------------
+Lil hearts
+-------------------------------------------------------------------------------- */
+
+.heart {
+  color: #EE4266;
+  font-size: 1.2em;
+}
+
 #footer-heart-left {
   float: left;
 }
