Change text color to space-cadet blue in inputs

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -156,6 +156,18 @@ input {
   margin-bottom: 10px;
 }
 
+textarea:focus, input:focus {
+  color: #373064;
+}
+
+input::placeholder {
+  color: #373064;
+}
+
+input, select, textarea, li {
+  color: #373064  !important;
+}
+
 /* --------------------------------------------------------------------------------
 Texts
 -------------------------------------------------------------------------------- */
