Rsvp form textarea border is space-cadet blue rather than MUI blue when active

--- a/src/components/User/Guest/RsvpPage/RsvpPage.css
+++ b/src/components/User/Guest/RsvpPage/RsvpPage.css
@@ -19,6 +19,10 @@ ul {
   color: #373064 !important;
 }
 
+.MuiOutlinedInput-notchedOutline {
+  border-color: #373064 !important;
+}
+
 #bummer-message, #welcome-message {
   text-align: center;
 }
