Update colors on snackbars

--- a/src/components/Snackbars/Snackbars.css
+++ b/src/components/Snackbars/Snackbars.css
@@ -1,6 +1,6 @@
 div.MuiPaper-root.MuiSnackbarContent-root {
-  border: 5px ridge #EE4266;
-  background-color: #373064;
-  color: #fcd299;
+  border: 5px ridge #B4ADFF;
+  background-color: #F8F0FB;
+  color: #373064;
   font-size: 1.2em;
 }
