Update nav menu colors

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -10,6 +10,7 @@
 /* deep_champagne: #FCD299 */
 /* gold_metallic: #E2B33C */
 /* magnolia: #F8F0FB */
+/* [user nav background]: #DAD6FF */
 /* maximum_blue_purple: #B4ADFF */
 /* space_cadet: #373064 */
 
